--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -86,7 +86,12 @@
     margin: 0 0 20px;
   }
 
+  .profile__edit-btn {
+    margin: 0 auto;
+  }
+
   .profile__add-btn {
     margin: 0;
+    width: 100%;
   }
 }
