--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,10 +10,13 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .modal_is-opened {
   visibility: visible;
+  opacity: 1;
 }
 
 .modal__container {
