--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -14,6 +14,59 @@
   transition: opacity 0.3s ease-in-out;
 }
 
+.modal_type_preview {
+  padding: 0 16px;
+}
+
+.modal__image-container {
+  position: relative;
+}
+
+.modal__close {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-size: 35px 35px;
+  border: none;
+  top: 32px;
+  right: 50px;
+  transition: 0.3s;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.modal__close_type_preview {
+  background: transparent url("../images/Close-Icon-white.svg") center no-repeat;
+  top: 0;
+  right: -52.5px;
+}
+
+.modal__close_type_preview:hover {
+  background: transparent url("../images/close-hover.svg") center no-repeat;
+}
+
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  border-radius: 8px;
+  width: 100%;
+  object-fit: contain;
+  display: block;
+}
+
+.modal__caption {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(33, 33, 33, 1);
+  border-radius: 8px;
+  padding: 4px 8px;
+  display: inline-block;
+}
+
 .modal_is-opened {
   visibility: visible;
   opacity: 1;
@@ -126,5 +179,16 @@
   .modal__submit-btn {
     max-width: none;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 627px) {
+  .modal__close_type_preview {
+    top: -48px;
+    right: 0;
+  }
+
+  .modal__image {
+    max-width: unset;
   }
 }
