Add eventListeners for Escape k ey and click event to close modals, add CSS and JS functions to make error  messages visible and invisible, add JS functions to disable submit button , add JS functions to enable submit button, add configuration object in va lidation.js

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -100,7 +100,7 @@
   opacity: 100%;
 }
 
-.modal__submit-btn {
+.modal__button {
   max-width: 156px;
   width: 100%;
   border-radius: 8px;
@@ -112,6 +112,12 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
+}
+
+.modal__button_disabled {
+  background-color: rgba(33, 33, 33, 1);
+  opacity: 50%;
+  color: rgba(252, 245, 229, 1);
 }
 
 .modal__title {
@@ -134,6 +140,7 @@
   font-size: 16px;
   line-height: 110%;
   color: rgba(33, 33, 33, 0.7);
+  display: block;
 }
 
 .modal__input {
@@ -151,6 +158,25 @@
 
 .modal__input::placeholder {
   color: rgba(33, 33, 33, 0.3);
+}
+
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
+.modal__error {
+  display: block;
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 110%;
+  color: rgba(255, 0, 0, 0.7);
+  margin-top: 8px;
+  opacity: 0;
+}
+
+.modal__error_visible {
+  opacity: 1;
 }
 
 @media screen and (max-width: 320px) {
@@ -177,7 +203,7 @@
     box-sizing: border-box;
   }
 
-  .modal__submit-btn {
+  .modal__button {
     max-width: none;
     width: 100%;
   }
