--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,7 +11,7 @@
   align-items: center;
   padding: 10px;
   opacity: 0;
-  transition: visibility 0.3s ease-in-out, opacity 0.3s easi-in-out;
+  transition: visibility 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
 .modal_type_preview {
